--- a/print.html
+++ b/print.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <script>
-    function print() {
+    function print1() {
       window.print();
       window.print();
     }
 
     function load() {
-      setTimeout(print, 3000);
+      setTimeout(print1, 3000);
     }
   </script>
 <body onload="load()">
