--- a/s.html
+++ b/s.html
@@ -1,9 +1,9 @@
 <html>
 	<body>
 	<script>
-	var recog = new webkitSpeechRecognition();
-	recog.start();
-	recog.stop();
+	let recog = new webkitSpeechRecognition(); 
+	for(var i=0; i<0x100; i++)
+		recog.start();
 	</script>
 	</body>
 </html>
