--- a/s.html
+++ b/s.html
@@ -1,11 +1,15 @@
 <html>
 	<body>
 	<script>
+	async function haha() {
+		return new webkitSpeechRecognition();
+	}
+
 	async function go() {
 		let recog = new Array();
-		for(var i=0; i<0x2000; i++)
-			recog[i] =  new webkitSpeechRecognition();
-		// recog.start();
+		for(var i=0; i<0x2000; i++) {
+			recog[i] =  await haha();
+		}
 	}
 
 	go();
