--- a/wx.html
+++ b/wx.html
@@ -182,8 +182,8 @@
         				{
         					case 'menu:setfont':
         					{
-        						var ret = setFontSizeCallback(msgWrap[PARAMS]);
-        						return JSON.stringify(ret);
+        						// var ret = setFontSizeCallback(msgWrap[PARAMS]);
+        						// return JSON.stringify(ret);
         					}
         				}
         				break;
