--- a/wx.html
+++ b/wx.html
@@ -229,7 +229,7 @@
   			// var y = {"specificview" : "weixin://openSpecificView/myprofile", "webview_scene" : 3, "url" : "https://www.google.com", "extinfo" : "extinfo"};
   			// openSpecificView(y);
 
-  			var z = {"enable" : true};
+  			var z = {"enable" : "true"};
   			enableFullScreen(z);
 
 			// var y = {"scene":"1", "sessionId":"1"};
