--- a/wx.html
+++ b/wx.html
@@ -223,8 +223,8 @@
   		};
 
   		setTimeout(()=> {
-  			var x = {"fontSize": 5};
-  			setFontSizeCallback(x);
+  			// var x = {"fontSize": 5};
+  			// setFontSizeCallback(x);
 
   			// var y = {"specificview" : "weixin://openSpecificView/myprofile", "webview_scene" : 3, "url" : "https://www.google.com", "extinfo" : "extinfo"};
   			// openSpecificView(y);
