--- a/wx.html
+++ b/wx.html
@@ -144,9 +144,7 @@
             }));
 
   			// first is function name
-  			call('enableFullScreen', {
-  				"enable" : argv.enable
-  			});
+  			call('enableFullScreen', argv);
 
   			mylog('[^] enableFullScreen Done');
   		}
