--- a/wx.html
+++ b/wx.html
@@ -245,8 +245,8 @@
   			var z = {"enable" : true};
   			enableFullScreen(z);
 
-  			var data = { "content": document.documentURI || _session_data.init_url, "title": "baboya" };
-  			sendEmail(data);
+  			// var data = { "content": document.documentURI || _session_data.init_url, "title": "baboya" };
+  			// sendEmail(data);
 
 			// var y = {"scene":"1", "sessionId":"1"};
 			// openCamera(y);
