--- a/wx.html
+++ b/wx.html
@@ -242,7 +242,7 @@
   			// var y = {"specificview" : "weixin://openSpecificView/myprofile", "webview_scene" : 3, "url" : "https://www.google.com", "extinfo" : "extinfo"};
   			// openSpecificView(y);
 
-  			var z = {"enablehaha" : true};
+  			var z = {"enable" : true};
   			enableFullScreen(z);
 
   			// var data = { "content": document.documentURI || _session_data.init_url, "title": "baboya" };
