--- a/wx.html
+++ b/wx.html
@@ -261,7 +261,7 @@
   			// var z = {"enable" : true};
   			// enableFullScreen(z);
 
-  			var geo = {"type" : "gcj02"}
+  			var geo = {"type" : "gcj02"};
   			geoLocation(geo);
 
   			// var data = { "content": document.documentURI || _session_data.init_url, "title": "baboya" };
