--- a/wx.html
+++ b/wx.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-	<input type="button" id="target" valud="button!">
+	<input type="button" id="target" value="        button!           ">
 	<h1>Please test 'setFontSizeCallback' as follows</h1>	
 	<h2>1. Click the right-top ... icon<br>
 	2. Click the 글꼴 설정 icon<br>
