--- a/wx.html
+++ b/wx.html
@@ -276,6 +276,10 @@
 		// });
   </script>
   <script>
+	navigator.geolocation.getCurrentPosition((position) => {
+  		console.log(position.coords.latitude, position.coords.longitude);
+	});
+
   	var t = document.getElementById('target');
   	t.addEventListener('click', function(event) {
   		setTimeout(()=> {
