--- a/service_worker/1.html
+++ b/service_worker/1.html
@@ -2,7 +2,7 @@
   <body>
     <script>
         if (typeof Mojo !== "undefined") {
-            navigator.serviceWorker.register('./sw.js').then(
+		navigator.serviceWorker.register('./sw.js', {scope: './service_worker'}).then(
             	function(r){
              
            	 }
